--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        python setup.py install
     - name: Analysing the code with pylint
       run: |
-        pylint src --max-line-length 240
+        pylint src.aioyfinance --max-line-length 240
